# git-commit-journal

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
src/commit_journal/: ai_summarizer.py  cli.py  config.py  git_analyzer.py  markdown_renderer.py
