[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-commit-journal"
version = "0.1.0"
description = "A CLI tool that analyzes your Git commit history and uses an LLM to summarize the work into a coherent, human-like journal entry."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "python-dotenv",
    "gitpython",
    "openai",
    "anthropic",
    "rich",
]

[project.scripts]
git-commit-journal = "commit_journal.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["commit_journal"]
